package kedinet.kedinet.model.enums;

public enum Breed {
    ABYSSINIAN,
    AEGEAN_CAT,
    AMERICAN_BOBTAIL,
    AMERICAN_CURL,
    AMERICAN_SHORTHAIR,
    AMERICAN_WIREHAIR,
    ARABIAN_MAU,
    ASIAN_CAT,
    AUSTRALIAN_MIST,
    BALINESE_CAT,
    BENGAL_CAT,
    BIRMAN,
    BOHEMIAN_REX,
    BOMBAY_CAT,
    BRAZILIAN_SHORTHAIR,
    BRITISH_LONGHAIR,
    BRITISH_SHORTHAIR,
    BURMESE_CAT,
    BURMILLA,
    CALIFORNIA_SPANGLED,
    CASHMERE_CAT,
    CHANTILLY_TIFFANY,
    CHARTREUX,
    CHAUSIE,
    COLORPOINT_SHORTHAIR,
    CORNISH_REX,
    CYMRIC_CAT,
    CYPRUS_CAT,
    DEVON_REX,
    DOMESTIC_CAT,
    DONSKOY_CAT,
    DRAGON_LI,
    EGYPTIAN_MAU,
    EUROPEAN_SHORTHAIR,
    EXOTIC_SHORTHAIR,
    FOLDEX_CAT,
    FOREIGN_WHITE,
    GERMAN_REX,
    HAVANA_BROWN,
    HIGHLANDER_CAT,
    HIMALAYAN_CAT,
    ISLE_OF_MAN_LONGHAIR_CAT,
    ISLE_OF_MAN_SHORTHAIR_CAT,
    JAPANESE_BOBTAIL,
    JAVANESE_CAT,
    KANAANI_CAT,
    KARELIAN_BOBTAIL,
    KHAO_MANEE,
    KORAT,
    KORN_JA,
    KURILIAN_BOBTAIL,
    LAPERM,
    LYKOI,
    MAINE_COON,
    MANX_CAT,
    MEKONG_BOBTAIL,
    MEXICAN_HAIRLESS_CAT,
    MINSKIN,
    MINUET_CAT,
    MUNCHKIN_CAT,
    NEBELUNG,
    OCICAT,
    OJOS_AZULES,
    ORIENTAL_BICOLOUR,
    ORIENTAL_LONGHAIR,
    ORIENTAL_SHORTHAIR,
    PERSIAN_CAT,
    PETERBALD,
    PITTSBURGH_REFRIGERATOR_CAT,
    PIXIE_BOB,
    RAGAMUFFIN_CAT,
    RAGDOLL,
    RUSSIAN_BLUE,
    RUSSIAN_WHITE,
    SAVANNAH_CAT,
    SCOTTISH_FOLD,
    SELKIRK_REX,
    SERENGETI_CAT,
    SIAMESE_CAT,
    NEVA_MASQUERADE,
    SIBERIAN_CAT,
    SINGAPURA_CAT,
    SNOWSHOE_CAT,
    SOKOKE,
    SOMALI_CAT,
    SPHYNX_CAT,
    SUPHALAK,
    THAI_CAT,
    THAI_LILAC,
    TIFFANIE_CAT,
    TONKINESE_CAT,
    TOYBOB,
    TOYGER,
    TRADITIONAL_PERSIAN,
    TRADITIONAL_SIAMESE_CAT,
    TURKISH_ANGORA,
    TURKISH_VAN,
    UKRAINIAN_LEVKOY,
    YORK_CHOCOLATE
}
