package kedinet.kedinet.model.enums;

public enum Region {
    ADALAR,
    ARNAVUTKOY,
    ATASEHIR,
    AVCILAR,
    BAGCILAR,
    BAHCELIEVLER,
    BAKIRKOY,
    BASAKSEHIR,
    BAYRAMPASA,
    BESIKTAS,
    BEYKOZ,
    BEYLIKDUZU,
    BEYOGLU,
    BUYUKCEKMECE,
    CATALCA,
    CEKMEKOY,
    ESENLER,
    ESENYURT,
    EYUPSULTAN,
    FATIH,
    GAZIOSMANPASA,
    GUNGOREN,
    KADIKOY,
    KAGITHANE,
    KARTAL,
    KUCUKCEKMECE,
    MALTEPE,
    PENDIK,
    SANCAKTEPE,
    SARIYER,
    SILE,
    SILIVRI,
    SISLI,
    SULTANBEYLI,
    SULTANGAZI,
    TUZLA,
    UMRANIYE,
    USKUDAR,
    ZEYTINBURNU
}
